k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cinema
  labels:
    name: cinema
