k8/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    name: web
    app: api-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
#      protocol: TCP
      name: http
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: api-gateway
spec:
   replicas: 1
   selector:
    matchLabels:
      app: api-gateway
   template:
     metadata:
       labels:
         app: api-gateway
         name: web         
     spec:
       containers:
       - name: api-gateway
         image: gcr.io/upbeat-circlet-199920/api-gateway
#         command: ["/bin/sh"]
#         args: ["-c", "tail -f /dev/null"]
         command: ["/bin/sh"]
         args: ["-c", "dumb-init npm start"]
         ports:
         - containerPort: 3000
