k8/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  labels:
    name: web
    app: login-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: login-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
   name: login-service
spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: login-service
         name: web         
     spec:
       containers:
       - name: login-service
         image: gcr.io/customerdemo-001/cinema-login-service:v1
         imagePullPolicy: Always
#        command: ["/bin/sh"]
#         args: ["-c", "dumb-init npm start"]
#         args: ["-c", "tail -f /dev/null"]
         imagePullPolicy: Always                 
         ports:
         - containerPort: 3000
         readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10          
         livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
