k8/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    name: web
    app: notification-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: notification-service
spec:
   replicas: 1
   selector:
    matchLabels:
      app: notification-service
   template:
     metadata:
       labels:
         app: notification-service
         name: web         
     spec:
       containers:
       - name: notification-service
         image: gcr.io/customerdemo-001/cinema-notification-service:v1
         imagePullPolicy: Always
#         command: ["/bin/sh"]
#         args: ["-c", "tail -f /dev/null"]
         command: ["/bin/sh"]
         args: ["-c", "dumb-init npm start"]
         imagePullPolicy: Always                 
         ports:
         - containerPort: 3000
         readinessProbe:            
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10               
         livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
