k8/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    name: web
    app: payment-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: payment-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
   name: payment-service
spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: payment-service
         name: web         
     spec:
       containers:
        - name: payment-service
          image: gcr.io/customerdemo-001/cinema-payment-service:v1
#          image: gcr.io/customerdemo-001/cinema-payment-service:v1-secure
          imagePullPolicy: Always            
          command: ["/bin/sh"]
          args: ["-c", "dumb-init npm start"]
#          args: ["-c", "tail -f /dev/null"]
          imagePullPolicy: Always                 
          ports:
          - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10               
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
